--- a/style.css
+++ b/style.css
@@ -1,12 +1,12 @@
 body {
   background: #23272a;
-  color: #f5f6fa;
+  color: #acb5db;
   font-family: 'Segoe UI', Arial, sans-serif;
   margin: 0;
 }
 
 header {
-  background: #2c2f33;
+  background: #5786c3;
   padding: 24px 0 12px 0;
   text-align: center;
   border-bottom: 4px solid #7289da;
@@ -17,7 +17,7 @@ header h2 {
   font-size: 2.2em;
   font-weight: bold;
   letter-spacing: 2px;
-  color: #7289da;
+  color: #2d3554;
 }
 
 header p {
